--- a/csye6225-infra.yaml
+++ b/csye6225-infra.yaml
@@ -1,167 +1,297 @@
-AWSTemplateFormatVersion: 2010-09-09
-
-Description: This template creates VPC with public subnets each in three availability zones with CIDR blocks route tables directed to the internet gateway  
-
-Metadata:
-  AWS::CloudFormation::Interface: 
-    ParameterGroups:
-      - 
-        Label: 
-          default: "VPC CIDR"
-        Parameters: 
-          - Vpc
-      - 
-        Label: 
-          default: "Subnet CIDR"
-        Parameters:
-          - PublicSubnet1Cidr
-          - PublicSubnet2Cidr
-          - PublicSubnet3Cidr
-      - 
-        Label: 
-          default: "SSH CIDR"
-        Parameters: 
-          - SSHLocation
-
+AWSTemplateFormatVersion: "2010-09-09"
+Description: CSYE 6225 Cloud Formation
 Parameters:
-  Vpc:
-    Default: 10.0.0.0/16
-    Description: Please enter Ip range for this VPC
-    Type: String
 
-  PublicSubnet1Cidr:
-    Default: 10.0.0.0/24
-    Description: Please enter Ip range for this VPC
+  VpcCidrBlock:
+    Description: "CIDR block for VPC"
     Type: String
+    Default: "10.0.0.0/16"
 
-  PublicSubnet2Cidr:
-    Default: 10.0.1.0/24
-    Description: Please enter Ip range for this VPC
+  PublicSubnet1CIDR:
+    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
     Type: String
+    Default: 10.0.10.0/24  
 
-  PublicSubnet3Cidr:
-    Default: 10.0.2.0/24
-    Description: Please enter Ip range for this VPC
+  PublicSubnet2CIDR:
+    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
     Type: String
+    Default: 10.0.20.0/24
 
-  SSHLocation:
-    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
-    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
-    Default: 0.0.0.0/0
-    Description: The IP address range that can be used to access the web server using SSH.
-    MaxLength: '18'
-    MinLength: '9'
+  PublicSubnet3CIDR:
+    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
     Type: String
+    Default: 10.0.30.0/24
+
+  PrivateSubnet1CIDR:
+    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
+    Type: String
+    Default: 10.0.40.0/24
+
+  PrivateSubnet2CIDR:
+    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
+    Type: String
+    Default: 10.0.50.0/24
     
-  ImageId:
-    Description: Please enter ImageID
+  PrivateSubnet3CIDR:
+    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
     Type: String
+    Default: 10.0.60.0/24    
+
+  TcpPort:
+    Description: Enter RDS Listening TCP Port number.
+    Type: Number
+    Default: '3306'    
+
+  DatabaseInstanceIdentifier:
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
+    Default: csye6225
+    Description: Instance identifier name
+    MaxLength: 60
+    MinLength: 1
+    Type: String
+
+  DatabaseName:
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
+    Default: csye6225
+    Description: MySQL database name
+    MaxLength: 64
+    MinLength: 1
+    Type: String
+
+  DatabaseUser:
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters
+    Default: csye6225
+    Description: Username for MySQL database access
+    MaxLength: 16
+    MinLength: 1
+    NoEcho: true
+    Type: String
+
+  DatabasePassword:
+    AllowedPattern: '[a-zA-Z0-9]*'
+    ConstraintDescription: Must contain only alphanumeric characters
+    Default: Pass1234
+    Description: Password for MySQL database access
+    MaxLength: 41
+    MinLength: 8
+    NoEcho: true
+    Type: String
+
+  DatabaseBackupRetentionPeriod:
+    ConstraintDescription: Database backup retention period must be between 0 and 35 days
+    Default: 0
+    Description: The number of days for which automatic DB snapshots are retained
+    MaxValue: 35
+    MinValue: 0
+    Type: Number
+
+  DatabaseAllocatedStorage:
+    ConstraintDescription: Must be between 5 and 1024Gb
+    Default: 20
+    Description: The size of the database (Gb)
+    MaxValue: 65536
+    MinValue: 5
+    Type: Number
+
+  DatabaseInstanceClass:
+    AllowedValues:
+      - db.t1.micro
+      - db.t2.micro
+      - db.t3.micro
+      - db.m1.small
+      - db.m1.medium
+      - db.m1.large
+    ConstraintDescription: Must select a valid database instance type
+    Default: db.t3.micro
+    Description: The database instance type
+    Type: String
+
+  MultiAZDatabase:
+    AllowedValues:
+      - true
+      - false
+    ConstraintDescription: Must be either true or false
+    Default: false
+    Description: Creates a Multi-AZ MySQL Amazon RDS database instance
+    Type: String
+
 
 
 Resources:
-# Create VPC
   VPC:
-    Type: AWS::EC2::VPC
+    Type: "AWS::EC2::VPC"
     Properties:
-      CidrBlock: !Ref Vpc
-      EnableDnsHostnames: true
-      EnableDnsSupport: true
-      InstanceTenancy: default
+      CidrBlock: !Ref VpcCidrBlock
+      EnableDnsSupport : 'true'
+      EnableDnsHostnames : 'true'
+      InstanceTenancy: 'default'
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-VPC
+          Value: !Join ['', [!Ref "AWS::StackName", "-VPC" ]]
 
-# Create Internet Gateway
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 0, !GetAZs '' ]
+      CidrBlock: !Ref PublicSubnet1CIDR
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-Public-1
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
+      CidrBlock: !Ref PublicSubnet2CIDR
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-Public-2
+
+  PublicSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 2, !GetAZs  '' ]
+      CidrBlock: !Ref PublicSubnet3CIDR
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-Public-3
+
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-IGW
+          Value: !Sub ${AWS::StackName}-Gateway
 
-# Attach Internet Gateway to VPC
   InternetGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
       InternetGatewayId: !Ref InternetGateway
       VpcId: !Ref VPC
 
-# Create Public Subnet1
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: !Select [ 0, !GetAZs '' ]
-      CidrBlock: !Ref PublicSubnet1Cidr
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-Public Subnet 1
-      VpcId: !Ref VPC
-
-# Create Public Subnet2
-  PublicSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: !Select [ 1, !GetAZs '' ]
-      CidrBlock: !Ref PublicSubnet2Cidr
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-Public Subnet 2
-      VpcId: !Ref VPC
-
-
-# Create Public Subnet3
-  PublicSubnet3:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: !Select [ 2, !GetAZs '' ]
-      CidrBlock: !Ref PublicSubnet3Cidr
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-Public Subnet 3
-      VpcId: !Ref VPC
-
-# Create Route Table
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
+      VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-Public Route Table
-      VpcId: !Ref VPC
+          Value: !Sub ${AWS::StackName}-Public-Routes
 
-# Add a Public Route to the Route Table
-  PublicRoute:
+  DefaultPublicRoute:
     Type: AWS::EC2::Route
+    DependsOn: InternetGatewayAttachment
     Properties:
+      RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
-      RouteTableId: !Ref PublicRouteTable
 
-# Associate Public Subnet1 with Public Route Table
   PublicSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet1
 
-# Associate Public Subnet2 with Public Route Table
   PublicSubnet2RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet2
 
-# Associate Public Subnet3 with Public Route Table
   PublicSubnet3RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet3
 
-# Create Security Group
+  #Private Subnet for RDS
+
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
+      CidrBlock: !Ref PrivateSubnet1CIDR
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} PrivateSubnet-1
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
+      CidrBlock: !Ref PrivateSubnet2CIDR
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} PrivateSubnet-2
+
+  PrivateSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select [ 2, !GetAZs  '' ]
+      CidrBlock: !Ref PrivateSubnet3CIDR
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} PrivateSubnet-3
+
+  PrivateRouteTable1:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} Private Routes (AZ1)
+
+  PrivateSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable1
+      SubnetId: !Ref PrivateSubnet1
+
+  PrivateRouteTable2:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} Private Routes (AZ2)
+
+  PrivateSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable2
+      SubnetId: !Ref PrivateSubnet2
+
+  PrivateRouteTable3:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName} Private Routes (AZ2)
+
+  PrivateSubnet3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable3
+      SubnetId: !Ref PrivateSubnet3
+
+
+
+  #Create Security Group
   SSHSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
@@ -175,7 +305,16 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIpv6: ::/0
+          CidrIpv6: ::/0    
+        # HTTPS access
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIpv6: ::/0  
         # HTTP access
         - IpProtocol: tcp
           FromPort: 80
@@ -185,16 +324,7 @@ Resources:
           FromPort: 80
           ToPort: 80
           CidrIpv6: ::/0
-        # HTTPS access
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIpv6: ::/0
-        # Webapp access
+        # Web Server
         - IpProtocol: tcp
           FromPort: 8080
           ToPort: 8080
@@ -202,18 +332,149 @@ Resources:
         - IpProtocol: tcp
           FromPort: 8080
           ToPort: 8080
-          CidrIpv6: ::/0
+          CidrIpv6: ::/0                   
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-SSH Security Group
       VpcId: !Ref VPC
+
+  #Create Security Group
+  DBSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: DB SecurityGroup
+      SecurityGroupIngress:
+        # MYSQL access
+        - IpProtocol: tcp
+          FromPort: 3306
+          ToPort: 3306
+          SourceSecurityGroupId: !Ref SSHSecurityGroup
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-DB Security Group
+      VpcId: !Ref VPC
+
+  DemoEc2InstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: EC2-CSYE6225
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          -
+            Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+
+  DemoInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties: 
+      InstanceProfileName: demo-ec2-instance-profile
+      Path: /
+      Roles: 
+       - !Ref DemoEc2InstanceRole
+
+
+  DemoInstanceS3Policy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: WebAppS3
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          -
+            Effect: Allow
+            Action:
+              - s3:DeleteObject
+              - s3:Get*
+              - s3:PutObject
+              - s3:List*
+            Resource:
+              - arn:aws:s3:::bucket.dev.khismatrao.me/*
+              - arn:aws:s3:::bucket.dev.khismatrao.me
+      Roles:
+        -
+          !Ref DemoEc2InstanceRole
+
+  S3Bucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: bucket.dev.khismatrao.me
+
+  S3BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal: "*"
+            Action:
+              - s3:DeleteObject
+              - s3:Get*
+              - s3:PutObject
+              - s3:List*
+            Resource:
+              - arn:aws:s3:::bucket.dev.khismatrao.me
+              - arn:aws:s3:::bucket.dev.khismatrao.me/*
+      Bucket: !Ref S3Bucket
+
+  DatabaseSubnetGroup:
+    Type: AWS::RDS::DBSubnetGroup
+    Properties:
+      DBSubnetGroupDescription: Subnet group for RDS database
+      SubnetIds: 
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
+      Tags:
+        - Key: Name
+          Value: database subnets
+
+  DatabaseInstance:
+    Type: AWS::RDS::DBInstance
+    Properties:
+      AllocatedStorage: !Ref DatabaseAllocatedStorage
+      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
+      BackupRetentionPeriod: !Ref DatabaseBackupRetentionPeriod
+      DBInstanceClass: !Ref DatabaseInstanceClass
+      DBInstanceIdentifier: !Ref DatabaseInstanceIdentifier
+      DBName: !Ref DatabaseName
+      DBSubnetGroupName: !Ref DatabaseSubnetGroup
+      Engine: MySQL
+      PubliclyAccessible : true
+      EngineVersion: 5.7.31
+      MasterUsername: !Ref DatabaseUser
+      MasterUserPassword: !Ref DatabasePassword
+      MultiAZ: !Ref MultiAZDatabase
+      VPCSecurityGroups: 
+        - !Ref DBSecurityGroup
+
 # Create EC2 Instance
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: !Ref ImageId
+      ImageId: ami-0018eab0bd0ac4a37
+      # !Ref ImageId
       InstanceType: t2.micro
       KeyName: application
+      UserData:
+        Fn::Base64: 
+          !Sub |
+            #!/bin/bash
+            echo "# App Environment Variables"
+            echo "export DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /etc/environment
+            echo "export DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /etc/environment
+            echo "export DB_DATABASE=${DatabaseName}" >> /etc/environment
+            echo "export DB_USERNAME=${DatabaseUser}" >> /etc/environment
+            echo "export DB_PASSWORD=${DatabasePassword}" >> /etc/environment
+            echo "export FILESYSTEM_DRIVER=s3" >> /etc/environment
+            echo "export AWS_BUCKET_NAME="bucket.dev.khismatrao.me"" >> /etc/environment
+            usermod -a -G www-data ubuntu
+
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
@@ -225,37 +486,7 @@ Resources:
           DeviceIndex: "0"
           SubnetId: !Ref PublicSubnet2
           GroupSet: [!Ref SSHSecurityGroup]
+      IamInstanceProfile: !Ref DemoInstanceProfile
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-EC2"
-          
-
-Outputs:
-# Export VPC ID
-  VPC:
-    Description: VPC ID
-    Export:
-      Name: !Sub ${AWS::StackName}-VPC
-    Value: !Ref VPC
-
-# Export Public Subnet 1 
-  PublicSubnet1:
-    Description: Public Subnet 1 ID
-    Export:
-      Name: !Sub ${AWS::StackName}-PublicSubnet1
-    Value: !Ref PublicSubnet1
-
-# Export Public Subnet 2
-  PublicSubnet2:
-    Description: Public Subnet 2 ID
-    Export:
-      Name: !Sub ${AWS::StackName}-PublicSubnet2
-    Value: !Ref PublicSubnet2
-
-# Export Public Subnet 3
-  PublicSubnet3:
-    Description: Public Subnet 3 ID
-    Export:
-      Name: !Sub ${AWS::StackName}-PublicSubnet3
-    Value: !Ref PublicSubnet3
-
