--- a/csye6225-infra.yaml
+++ b/csye6225-infra.yaml
@@ -393,9 +393,9 @@ Resources:
           -
             Effect: Allow
             Action:
-              - s3:DeleteObject
+              - s3:Delete*
               - s3:Get*
-              - s3:PutObject
+              - s3:Put*
               - s3:List*
             Resource:
               - arn:aws:s3:::bucket.dev.khismatrao.me/*
@@ -408,23 +408,14 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: bucket.dev.khismatrao.me
-
-  S3BucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      PolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal: "*"
-            Action:
-              - s3:DeleteObject
-              - s3:Get*
-              - s3:PutObject
-              - s3:List*
-            Resource:
-              - arn:aws:s3:::bucket.dev.khismatrao.me
-              - arn:aws:s3:::bucket.dev.khismatrao.me/*
-      Bucket: !Ref S3Bucket
+      LifecycleConfiguration:
+        Rules:
+         - Id: Rule for s3 bucket
+           Prefix: S3 images
+           Status: Enabled
+           Transitions:
+            - TransitionInDays: 30
+              StorageClass: STANDARD_IA
 
   DatabaseSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
