--- a/csye6225-infra.yaml
+++ b/csye6225-infra.yaml
@@ -117,25 +117,33 @@ Parameters:
     Default: false
     Description: Creates a Multi-AZ MySQL Amazon RDS database instance
     Type: String
-    
+
   ImageId:
-    Description: Image ID
+    Description: Please enter ImageID
     Type: String
-    
+
   ProfileName:
-    Description: Profile Name
+    Default: demo
     Type: String
-    
+    Description: Enter the profile that you want this to run on either dev or demo
+
   AccessKey:
     Description: AccessKey
     Type: String
     
   SecretKey:
     Description: SecretKey
-    Type: String 
+    Type: String
 
+  DomainName:
+    Description: domain Name for S3 Bucket Naming
+    Type: String
+    Default: prod.khismatrao.me
 
-
+  HostedZoneID:
+    Description: domain Name for S3 Bucket Naming
+    Type: String
+    
 Resources:
   VPC:
     Type: "AWS::EC2::VPC"
@@ -305,23 +313,12 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable3
       SubnetId: !Ref PrivateSubnet3
 
-
-
-  #Create Security Group
-  SSHSecurityGroup:
+#Create Security Group for the Application Load Balancer 
+  ALBSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
-      GroupDescription: SSH Security Group
+      GroupDescription: Enable HTTP/HTTPS access on port 80/443
       SecurityGroupIngress:
-        # SSH access
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIpv6: ::/0    
         # HTTPS access
         - IpProtocol: tcp
           FromPort: 443
@@ -340,21 +337,37 @@ Resources:
           FromPort: 80
           ToPort: 80
           CidrIpv6: ::/0
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-ALB Security Group
+      VpcId: !Ref VPC
+
+  #Create Security Group
+  SSHSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: SSH Security Group
+      SecurityGroupIngress:
+        # SSH access
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIpv6: ::/0    
         # Web Server
         - IpProtocol: tcp
           FromPort: 8080
           ToPort: 8080
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 8080
-          ToPort: 8080
-          CidrIpv6: ::/0                   
+          SourceSecurityGroupId: !Ref ALBSecurityGroup                  
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-SSH Security Group
       VpcId: !Ref VPC
 
-  #Create Security Group
+  #Create DB Group
   DBSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
@@ -373,18 +386,18 @@ Resources:
   DemoEc2InstanceRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: EC2-CSYE6225
+      RoleName: "EC2-CSYE6225"
       AssumeRolePolicyDocument:
-        Version: 2012-10-17
+        Version: "2012-10-17"
         Statement:
           -
-            Effect: Allow
+            Effect: "Allow"
             Principal:
               Service:
-                - ec2.amazonaws.com
+                - "ec2.amazonaws.com"
             Action:
-              - sts:AssumeRole
-      Path: /
+              - "sts:AssumeRole"
+      Path: "/"
 
   DemoInstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -405,13 +418,14 @@ Resources:
           -
             Effect: Allow
             Action:
-              - s3:Delete*
-              - s3:Get*
-              - s3:Put*
-              - s3:List*
+              - s3:DeleteObject
+              - s3:GetObject
+              - s3:PutObject
+              - s3:ListObject
             Resource:
-              - arn:aws:s3:::${S3Bucket}/*
-              - arn:aws:s3:::${S3Bucket}
+              - !Sub arn:aws:s3:::${S3Bucket}/*
+              - !Sub arn:aws:s3:::${S3Bucket}
+
       Roles:
         -
           !Ref DemoEc2InstanceRole
@@ -431,20 +445,25 @@ Resources:
                   - "/"
                   - !Ref "AWS::StackId"
           - Ref: "ProfileName"
-          - "khismatrao.me"
+          - "akshaysinghbayes.me"
       AccessControl: Private
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       BucketEncryption:
         ServerSideEncryptionConfiguration:
-         - ServerSideEncryptionByDefault:
-             SSEAlgorithm: AES256
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
       LifecycleConfiguration:
         Rules:
-         - Id: Rule for s3 bucket
-           Prefix: S3 images
-           Status: Enabled
-           Transitions:
-            - TransitionInDays: 30
-              StorageClass: STANDARD_IA
+          - Id: Rule for log prefix
+            Prefix: logs
+            Status: Enabled
+            Transitions:
+              - TransitionInDays: 30
+                StorageClass: STANDARD_IA
 
   DatabaseSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
@@ -457,9 +476,20 @@ Resources:
       Tags:
         - Key: Name
           Value: database subnets
+  
+  MyDBParameterGroup:
+    Type: AWS::RDS::DBParameterGroup
+    Properties:
+      Description: CloudFormation Sample MySQL Parameter Group
+      Family: mysql5.7
+      Parameters:
+        sql_mode: NO_ENGINE_SUBSTITUTION
+        max_allowed_packet: 1073741824
+        innodb_buffer_pool_size: '{DBInstanceClassMemory*3/4}'
 
   DatabaseInstance:
     Type: AWS::RDS::DBInstance
+    DeletionPolicy: Delete
     Properties:
       AllocatedStorage: !Ref DatabaseAllocatedStorage
       AvailabilityZone: !Select [ 1, !GetAZs  '' ]
@@ -468,6 +498,7 @@ Resources:
       DBInstanceIdentifier: !Ref DatabaseInstanceIdentifier
       DBName: !Ref DatabaseName
       DBSubnetGroupName: !Ref DatabaseSubnetGroup
+      DBParameterGroupName: !Ref MyDBParameterGroup
       Engine: MySQL
       PubliclyAccessible : true
       EngineVersion: 5.7.31
@@ -477,51 +508,262 @@ Resources:
       VPCSecurityGroups: 
         - !Ref DBSecurityGroup
 
-# Create EC2 Instance
-  EC2Instance:
-    Type: AWS::EC2::Instance
+# Application Load Balancer
+  # asgLaunchTemplate:
+  #   Type: AWS::EC2::LaunchTemplate
+  #   Properties:
+  #     LaunchTemplateName: !Sub '${AWS::StackName}-launch-template'
+  #     LaunchTemplateData:
+  #       BlockDeviceMappings:
+  #       - DeviceName: /dev/xvda
+  #         Ebs:
+  #           VolumeSize: 20
+  #           VolumeType: "gp2"
+  #           DeleteOnTermination: true
+  #       ImageId: !Ref ImageId
+  #       InstanceType: t2.micro
+  #       KeyName: aws-user
+  #       IamInstanceProfile: 
+  #         Name: !Ref DemoInstanceProfile
+  #         # GroupSet: [!Ref SSHSecurityGroup]
+  #       SecurityGroupIds:
+  #        - !Ref SSHSecurityGroup
+  #         # GroupSet: [!Ref SSHSecurityGroup]
+  #       UserData:
+  #         Fn::Base64: 
+  #           !Sub |
+  #             #!/bin/bash
+  #             echo "------------------------------Setting Env Vars------------------------------------"
+  #             cd /home/ec2-user/
+  #             touch environment.env
+  #             echo "DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /home/ec2-user/environment.env
+  #             echo "DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /home/ec2-user/environment.env
+  #             echo "DB_DATABASE=${DatabaseName}" >> /home/ec2-user/environment.env
+  #             echo "DB_USERNAME=${DatabaseUser}" >> /home/ec2-user/environment.env
+  #             echo "DB_PASSWORD=${DatabasePassword}" >> /home/ec2-user/environment.env
+  #             echo "ACCESS_KEY=${AccessKey}" >> /home/ec2-user/environment.env
+  #             echo "SECRET_KEY=${SecretKey}" >> /home/ec2-user/environment.env
+  #             echo "FILESYSTEM_DRIVER=s3" >> /home/ec2-user/environment.env
+  #             echo "AWS_BUCKET_NAME=${S3Bucket}" >> /home/ec2-user/environment.env
+  #             sudo chmod 777 /home/ec2-user/environment.env
+  #             sudo chmod 777 /home/ec2-user/webapp.sh
+  #             echo "------------------------------Starting Webapp------------------------------------"
+  #             cd /etc/systemd/system
+  #             sudo chmod 777 myservice.service
+  #             sudo systemctl daemon-reload
+  #             sudo systemctl start myservice.service
+  #             sudo systemctl enable myservice.service
+  #             chown -R ec2-user:www-data /var/www
+  #             usermod -a -G www-data ec2-user
+  #             echo "------------------------------Completed Process------------------------------------"
+
+  asglaunchconfig:
+    Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
-      ImageId: !Ref ImageId
+      LaunchConfigurationName: !Sub '${AWS::StackName}-asg_launch_config'
+      AssociatePublicIpAddress: "true"
       InstanceType: t2.micro
       KeyName: application
-      UserData:
-        Fn::Base64: 
-          !Sub |
-            #!/bin/bash
-            echo "# App Environment Variables"
-            cd /home/ec2-user/
-            touch environment.env
-            echo "DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /home/ec2-user/environment.env
-            echo "DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /home/ec2-user/environment.env
-            echo "DB_DATABASE=${DatabaseName}" >> /home/ec2-user/environment.env
-            echo "DB_USERNAME=${DatabaseUser}" >> /home/ec2-user/environment.env
-            echo "DB_PASSWORD=${DatabasePassword}" >> /home/ec2-user/environment.env
-            echo "ACCESS_KEY=${AccessKey}" >> /home/ec2-user/environment.env
-            echo "SECRET_KEY=${SecretKey}" >> /home/ec2-user/environment.env
-            echo "FILESYSTEM_DRIVER=s3" >> /home/ec2-user/environment.env
-            echo "AWS_BUCKET_NAME=${S3Bucket}" >> /home/ec2-user/environment.env
-            sudo chmod 777 /home/ec2-user/environment.env
-            sudo chmod 777 /home/ec2-user/webapp.sh
-            cd /etc/systemd/system
-            sudo chmod 777 application.service
-            sudo systemctl daemon-reload
-            sudo systemctl start application.service
-            sudo systemctl enable application.service
-            chown -R ec2-user:www-data /var/www
-            usermod -a -G www-data ec2-user
-
-      BlockDeviceMappings:
-        - DeviceName: /dev/xvda
-          Ebs:
-            VolumeType: "gp2"
-            DeleteOnTermination: "true"
-            VolumeSize: "20"
-      NetworkInterfaces:
-        - AssociatePublicIpAddress: "true"
-          DeviceIndex: "0"
-          SubnetId: !Ref PublicSubnet2
-          GroupSet: [!Ref SSHSecurityGroup]
+      ImageId: !Ref ImageId
       IamInstanceProfile: !Ref DemoInstanceProfile
+      SecurityGroups:
+        - !Ref SSHSecurityGroup
+      BlockDeviceMappings:
+      - DeviceName: /dev/xvda
+        Ebs:
+          VolumeSize: 20
+          VolumeType: "gp2"
+          DeleteOnTermination: true
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          echo "# App Environment Variables"
+          cd /home/ec2-user/
+          touch environment.env
+          echo "DB_HOST=${DatabaseInstance.Endpoint.Address}" >> /home/ec2-user/environment.env
+          echo "DB_PORT=${DatabaseInstance.Endpoint.Port}" >> /home/ec2-user/environment.env
+          echo "DB_DATABASE=${DatabaseName}" >> /home/ec2-user/environment.env
+          echo "DB_USERNAME=${DatabaseUser}" >> /home/ec2-user/environment.env
+          echo "DB_PASSWORD=${DatabasePassword}" >> /home/ec2-user/environment.env
+          echo "ACCESS_KEY=${AccessKey}" >> /home/ec2-user/environment.env
+          echo "SECRET_KEY=${SecretKey}" >> /home/ec2-user/environment.env
+          echo "FILESYSTEM_DRIVER=s3" >> /home/ec2-user/environment.env
+          echo "AWS_BUCKET_NAME=${S3Bucket}" >> /home/ec2-user/environment.env
+          sudo chmod 777 /home/ec2-user/environment.env
+          sudo chmod 777 /home/ec2-user/webapp.sh
+          cd /etc/systemd/system
+          sudo chmod 777 application.service
+          sudo systemctl daemon-reload
+          sudo systemctl start application.service
+          sudo systemctl enable application.service
+          chown -R ec2-user:www-data /var/www
+          usermod -a -G www-data ec2-user
+          echo "------------------------------Completed Process------------------------------------"
+
+  asgWebApp:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      AutoScalingGroupName: !Sub ${AWS::StackName}-asg
+      AvailabilityZones:
+        - us-east-1a
+        - us-east-1b
+        - us-east-1c
+      Cooldown: '300'
+      DesiredCapacity: '3'
+      HealthCheckGracePeriod: 90
+      HealthCheckType: EC2
+      LaunchConfigurationName: !Ref asglaunchconfig
+      # LaunchTemplate:
+      #   LaunchTemplateId: !Ref asgLaunchTemplate
+      #   Version: !GetAtt asgLaunchTemplate.LatestVersionNumber
+      MaxSize: '5'
+      MinSize: '3'
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-EC2"
+          Value: !Sub ${AWS::StackName}-asg
+          PropagateAtLaunch: "true"
+      TargetGroupARNs:
+        - !Ref loadBalancerTargetGroup
+      VPCZoneIdentifier:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+
+  # asgCPUPolicy:
+  #   Type: AWS::AutoScaling::ScalingPolicy
+  #   Properties:
+  #     AutoScalingGroupName: !Ref asgWebApp
+  #     PolicyType: TargetTrackingScaling
+  #     TargetTrackingConfiguration:
+  #       PredefinedMetricSpecification:
+  #         PredefinedMetricType: ASGAverageCPUUtilization
+  #       TargetValue: 1
+
+  WebServerScaleUpPolicy:
+    Type: AWS::AutoScaling::ScalingPolicy
+    Properties:
+      AdjustmentType: ChangeInCapacity
+      AutoScalingGroupName:
+        Ref: asgWebApp
+      Cooldown: 60
+      ScalingAdjustment: 1
+
+  WebServerScaleDownPolicy:
+    Type: AWS::AutoScaling::ScalingPolicy
+    Properties:
+      AdjustmentType: ChangeInCapacity
+      AutoScalingGroupName:
+        Ref: asgWebApp
+      Cooldown: 60
+      ScalingAdjustment: -1
+
+  CPUAlarmHigh:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmDescription: Scale-up if CPU > 5%
+      MetricName: CPUUtilization
+      Namespace: AWS/EC2
+      Statistic: Average
+      Period: '60'
+      EvaluationPeriods: 1
+      Threshold: 5
+      AlarmActions:
+      - Ref: WebServerScaleUpPolicy
+      Dimensions:
+      - Name: AutoScalingGroupName
+        Value:
+          Ref: asgWebApp
+      ComparisonOperator: GreaterThanThreshold
+
+  CPUAlarmLow:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmDescription: Scale-down if CPU < 3%
+      MetricName: CPUUtilization
+      Namespace: AWS/EC2
+      Statistic: Average
+      Period: '60'
+      EvaluationPeriods: 1
+      Threshold: 3
+      AlarmActions:
+      - Ref: WebServerScaleDownPolicy
+      Dimensions:
+      - Name: AutoScalingGroupName
+        Value:
+          Ref: asgWebApp
+      ComparisonOperator: LessThanThreshold
+
+  loadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      IpAddressType: ipv4
+      LoadBalancerAttributes:
+        - Key: idle_timeout.timeout_seconds
+          Value: '60'
+      Name: !Sub ${AWS::StackName}-load-balancer
+      Scheme: internet-facing
+      SecurityGroups:
+        - !Ref ALBSecurityGroup
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+      Tags:
+        - Key: Application
+          Value: WebApp
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-load-balancer
+      Type: application
+
+  loadBalancerTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 90
+      HealthCheckPath: '/'
+      HealthCheckPort: '8080'
+      HealthCheckProtocol: 'HTTP'
+      HealthCheckTimeoutSeconds: 60
+      HealthyThresholdCount: 2
+      IpAddressType: ipv4
+      Name: !Sub ${AWS::StackName}-lb-tg
+      Port: 8080
+      Protocol: 'HTTP'
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-lb-tg
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: '20'
+      TargetType: instance
+      UnhealthyThresholdCount: 2
+      VpcId: !Ref VPC
+
+  loadBalancerListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref loadBalancerTargetGroup
+      LoadBalancerArn: !Ref loadBalancer
+      Port: 80
+      Protocol: HTTP
+
+# DNS record
+  myDNSRecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      Name:
+        Ref: DomainName
+      Type: A
+      HostedZoneId:
+        Ref: HostedZoneID
+      AliasTarget:
+        DNSName:
+          Fn::GetAtt:
+          - loadBalancer
+          - DNSName
+        EvaluateTargetHealth: false
+        HostedZoneId:
+          Fn::GetAtt:
+          - loadBalancer
+          - CanonicalHostedZoneID
