--- a/csye6225-infra.yaml
+++ b/csye6225-infra.yaml
@@ -720,7 +720,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckIntervalSeconds: 90
-      HealthCheckPath: '/'
+      HealthCheckPath: '/healthz'
       HealthCheckPort: '8080'
       HealthCheckProtocol: 'HTTP'
       HealthCheckTimeoutSeconds: 60
